fix(flexbox): Prevent pre element overflow when container is flex

--- a/assets/css/code.css
+++ b/assets/css/code.css
@@ -12,7 +12,6 @@ div.highlighter-rouge {
 
   margin-bottom: 1rem;
   padding: 1.5rem;
-  white-space: pre-wrap;
 }
 
 div.highlighter-rouge pre.highlight {
